<resources>
    <string name="app_name">Schuifpuzzel</string>
`
    <string name="action_settings">Difficulty</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    
    <string name="newgame">New Game</string>
    <string name="moves">Moves: </string>
    <string name="difficulty">Difficulty: \u0020</string>
    <string name="winMessage">You won!</string>
    <string name="reset">Reset</string>
    <string name="quit">Quit</string>
    <string name="difficulty_pref">net.brord.android.schuifpuzzel.difficulty</string>
    <string name="solution">Solution</string>
    <string name="dismiss">Solution - Tap to dismiss</string>
    <string name="endturn">End turn</string>
    <string name="currentPlayer">Aan zet: </string>
    <string name="timeLeft">Tijd: </string>

    <string name="leave">Quit game</string>
    <string name="clearScreen">Clear screen</string>
    <string name="firebase">https://npuzzle.firebaseio.com</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>

    <string name="username">Username: \u0020</string>
    <string name="create">Create game</string>
    <string name="findByName">Find by username</string>
    <string name="findByLoc">Find by location range</string>
    <string name="searchByLoc">Scanning your surroundings...</string>

    <string name="error">Error!</string>
    <string name="success">Success!</string>
    <string name="unavailable">Username unavailable</string>
    <string name="searching">Searching games...</string>
    <string name="waiting">Waiting for opponent...</string>
    <string name="checking">Checking user info</string>

    <string name="opponentunavailable">There is no opponent with that name</string>
    <string name="opponentavailable">Opponent found</string>
    <string name="opponent_already_playing">Opponent is already playing</string>
    <string name="opponent_no_room">Opponent has no room</string>
    <string name="opponent_joined_room">Opponent has joined the room</string>

    <string name="cancelledOpponentSearch">Cancelled search</string>
    <string name="user_left">Opponent left... Stopping</string>
    <string name="not_your_turn">Its not your turn!</string>

</resources>
